--- a/package.json
+++ b/package.json
@@ -52,27 +52,29 @@
   "dependencies": {
     "async": "2.1.2",
     "consolidate": "0.14.5",
-    "express": "4.14.0",
-    "graceful-fs": "4.1.10",
-    "helmet": "3.8.1",
+    "express": "^4.17.1",
+    "graceful-fs": "^4.2.3",
+    "helmet": "^3.21.2",
     "htmlclean": "2.7.7",
     "lodash": "3.10.1",
     "methods": "1.1.2",
     "mkdirp": "0.5.1",
     "nedb": "1.8.0",
-    "nunjucks": "3.0.0",
-    "on-headers": "1.0.1",
+    "nunjucks": "^3.2.0",
+    "on-headers": "^1.0.2",
     "pagedown": "1.1.0",
     "path-to-regexp": "1.7.0",
-    "request": "2.79.0",
-    "serve-favicon": "2.3.2",
+    "request": "^2.88.0",
+    "serve-favicon": "^2.5.0",
     "sift": "3.2.6",
     "socket.io-client": "1.4.5",
-    "when": "3.7.7",
+    "when": "^3.7.8",
     "winston": "2.3.0"
   },
   "description": "Built.io Contentstack web application framework based on Express.",
-  "devDependencies": {},
+  "devDependencies": {
+    "npm-check": "^5.9.0"
+  },
   "directories": {},
   "dist": {
     "shasum": "0199ceb29376a8322c2efcf168aa270aeb3e68c2",
